[tool.poetry]
name = "pyleetcode-utils"
description = "Python Leetcode utilities"
version = "0.1.3"
license = "MIT"

authors = ["Vadim Gazizov <i.am.vadim.gazizov@gmail.com>"]

readme = "README.md"

repository = "https://github.com/smokevadim/pyleetcode-utils"

keywords = []

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8"

wemake-python-styleguide = "^0.18"
flake8-pytest-style = "^1.6"
nitpick = "^0.35"

pytest = "^8.0"
pytest-cov = ">=4.1,<6.0"
pytest-randomly = "^3.15"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^7.1"
sphinx-autodoc-typehints = "^2.0"
m2r2 = "^0.3"
tomli = "^2.0"
doc8 = "^1.0"


[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"


[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/nitpick-style-wemake.toml"
